Edit index.html and style.css

--- a/index.html
+++ b/index.html
@@ -8,27 +8,45 @@
     </head>
     <body>
         <div class="header">
-            <div>Header Logo</div>
-            <ul>
+            <div class="header-logo">Header Logo</div>
+            <ul class="header-link">
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
-
-        <div class="body">
-            <div class="first">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                <button class="body-button">Sign up</button>
-                <div class="image">
+        
+        <div class="first-page">
+            <div class="right-content">
+                <h1 class="main-text">This website is awesome</h1>
+                <p class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button>Sign up</button>
+            </div>
+            <div class="left-content">
+                <div class="placeholder">
                     <p>this is a placeholder for an image</p>
                 </div>
             </div>
         </div>
 
+        <div class="second-page">
+            <h1 class="content-heading">Some random information.</h1>
+            <div class="information">
+                <div>
+                    <div class="square"></div>
+                    <p class="square-text">This is some subtext under an illustration or image</p>
+                </div>
+
+                <div>
+                    <div class="square"></div>
+                    <p class="square-text">This is some subtext under an illustration or image</p>
+                </div>
+                
+            </div>
+        </div>
+
         <div class="footer">
-            <div>Copyright © The Odin Project 2023</div>
+            <div>footer</div>
         </div>
     </body>
 </html>
