--- a/index.html
+++ b/index.html
@@ -41,12 +41,39 @@
                     <div class="square"></div>
                     <p class="square-text">This is some subtext under an illustration or image</p>
                 </div>
-                
+
+                <div>
+                    <div class="square"></div>
+                    <p class="square-text">This is some subtext under an illustration or image</p>
+                </div>
+
+                <div>
+                    <div class="square"></div>
+                    <p class="square-text">This is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="third-page">
+            <div class="quote-container">
+                <h1 class="quote">This is an inspiring quote, or a tertimonial from a customer. Maybe it's just filling up space, or maybe people wll actually read it. Who knows? All I know is that it looks nice.</h1>
+                <p class="author">-Thor, God of Thunder</p>
+            </div>
+        </div>
+
+        <div class="fourth-page">
+            <div class="sign-up-container">
+                <div>
+                    <h2 class="main-text-call">Call to action! It's time!</h2>
+                    <p class="secondary-text-call">Sign up for our product by clicking that button right over there!</p>
+                </div>
+
+                <button class="second-sign-up">Sign up</button>
             </div>
         </div>
 
         <div class="footer">
-            <div>footer</div>
+            <p>Copyright © The Odin Project 2023</p>
         </div>
     </body>
 </html>
