Edit index.html and style.css

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         </div>
         
         <div class="first-page">
-            <div class="right-content">
+            <div>
                 <h1 class="main-text">This website is awesome</h1>
                 <p class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                <button>Sign up</button>
+                <button class="first-sign-up">Sign up</button>
             </div>
-            <div class="left-content">
-                <div class="placeholder">
-                    <p>this is a placeholder for an image</p>
+            <div>
+                <div class="image-placeholder">
+                    <p class="text-placeholder">this is a placeholder for an image</p>
                 </div>
             </div>
         </div>
